--- a/Completed-Service.html
+++ b/Completed-Service.html
@@ -262,7 +262,7 @@
                         <div class="card-header pb-0 card-no-border">
                            <div class="d-flex justify-content-between">
                               <div>
-                                 <h4>  Service Status List</h4>
+                                 <h4>Completed service</h4>
                               </div>
                               <div>
                                  <div id="stock_wrapper" class="dataTables_wrapper">
