--- a/AddService.html
+++ b/AddService.html
@@ -114,74 +114,84 @@
       <div class="page-body-wrapper">
         <!-- Page Sidebar Start-->
         <div class="sidebar-wrapper" data-layout="stroke-svg">
-          <div class="logo-wrapper"><a href="index.html"><img class="img-fluid w-75" src="assets/images/logo/logo-unique_it.webp" alt=""></a>
-            <div class="back-btn"><i class="fa fa-angle-left"> </i></div>
-            <div class="toggle-sidebar"><i class="status_toggle middle sidebar-toggle" data-feather="grid"> </i></div>
-          </div>
-          <div class="logo-icon-wrapper"><a href="index.html"></a></div>
-          <nav class="sidebar-main">
-            <div class="left-arrow" id="left-arrow"><i data-feather="arrow-left"></i></div>
-            <div id="sidebar-menu">
-              <ul class="sidebar-links" id="simple-bar">
-                <li class="back-btn"><a href="index.html"><img class="img-fluid" src="assets/images/logo/logo-icon.png" alt=""></a>
-                  <div class="mobile-back text-end"> <span>Back </span><i class="fa fa-angle-right ps-2" aria-hidden="true"></i></div>
-                </li>
-                <li class="pin-title sidebar-main-title">
-                  <div> 
-                    <h6>Pinned</h6>
+               <div class="logo-wrapper">
+                  <a href="index.html"><img class="img-fluid w-75" src="assets/images/logo/logo-unique_it.webp" alt=""></a>
+                  <div class="back-btn"><i class="fa fa-angle-left"> </i></div>
+                  <div class="toggle-sidebar"><i class="status_toggle middle sidebar-toggle" data-feather="grid"> </i></div>
+               </div>
+               <div class="logo-icon-wrapper"><a href="index.html"></a></div>
+               <nav class="sidebar-main">
+                  <div class="left-arrow" id="left-arrow"><i data-feather="arrow-left"></i></div>
+                  <div id="sidebar-menu">
+                     <ul class="sidebar-links" id="simple-bar">
+                     <li class="back-btn">
+                        <a href="index.html"><img class="img-fluid" src="assets/images/logo/logo-icon.png" alt=""></a>
+                        <div class="mobile-back text-end"> <span>Back </span><i class="fa fa-angle-right ps-2" aria-hidden="true"></i></div>
+                     </li>
+                     <li class="pin-title sidebar-main-title">
+                        <div>
+                           <h6>Pinned</h6>
+                        </div>
+                     </li>
+                     <li class="sidebar-main-title">
+                        <div>
+                           <h6 class="lan-1">General</h6>
+                        </div>
+                     </li>
+                     <li class="sidebar-list"><i class="fa fa-thumb-tack"> </i>
+                        <a class="sidebar-link" href="index.html">
+                        <i class="fa fa-home text-white" aria-hidden="true"></i>
+                        <span class="lan-2">Dasboard</span></a>
+                     </li>
+                     <li class="sidebar-list"><i class="fa fa-thumb-tack"> </i>
+                     <a class="sidebar-link" href="Problem-list.html">
+                     <i class="fa fa-home text-white" aria-hidden="true"></i>
+                     <span class="lan-2">Problem List</span></a>
+                  </li>
+                  <li class="sidebar-list"><i class="fa fa-thumb-tack"> </i>
+                     <a class="sidebar-link" href="ServiceRequest-list.html">
+                     <i class="fa fa-home text-white" aria-hidden="true"></i>
+                     <span class="lan-2">Service Request List</span></a>
+                  </li>
+                  <li class="sidebar-list"><i class="fa fa-thumb-tack"> </i>
+                     <a class="sidebar-link" href="ServiceReport-list.html">
+                     <i class="fa fa-home text-white" aria-hidden="true"></i>
+                     <span class="lan-2">Service Report</span></a>
+                  </li>
+                  <li class="sidebar-list"><i class="fa fa-thumb-tack"> </i>
+                     <a class="sidebar-link" href="service-status.html">
+                     <i class="fa fa-home text-white" aria-hidden="true"></i>
+                     <span class="lan-2">Service Status</span></a>
+                  </li>
+                     <li class="sidebar-list"><i class="fa fa-thumb-tack"> </i>
+                        <a class="sidebar-link" href="Working-Service.html">
+                        <i class="fa fa-home text-white" aria-hidden="true"></i>
+                        <span class="lan-2">Working Service</span></a>
+                     </li>
+                     <li class="sidebar-list"><i class="fa fa-thumb-tack"> </i>
+                        <a class="sidebar-link" href="Completed-Service.html">
+                        <i class="fa fa-home text-white" aria-hidden="true"></i>
+                        <span class="lan-2">Completed Service</span></a>
+                     </li>
+                     <li class="sidebar-list"><i class="fa fa-thumb-tack"> </i>
+                        <a class="sidebar-link" href="Plumberlist.html">
+                        <i class="fa fa-home text-white" aria-hidden="true"></i>
+                        <span class="lan-2">Plumber</span></a>
+                     </li>
+                      <li class="sidebar-list"><i class="fa fa-thumb-tack"> </i>
+                  <a class="sidebar-link" href="Plumberreport.html">
+                  <i class="fa fa-home text-white" aria-hidden="true"></i>
+                  <span class="lan-2">Plumber Report</span></a>
+                </li> 
+                     <li class="sidebar-list"><i class="fa fa-thumb-tack"> </i>
+                        <a class="sidebar-link" href="Payment.html">
+                        <i class="fa fa-home text-white" aria-hidden="true"></i>
+                        <span class="lan-2">Payment</span></a>
+                     </li>
+                     <div class="right-arrow" id="right-arrow"><i data-feather="arrow-right"></i></div>
                   </div>
-                </li>
-                <li class="sidebar-main-title">
-                  <div>
-                    <h6 class="lan-1">General</h6>
-                  </div>
-                </li>
-                <li class="sidebar-list"><i class="fa fa-thumb-tack"> </i>
-                  <a class="sidebar-link" href="index.html">
-                  <i class="fa fa-home text-white" aria-hidden="true"></i>
-                  <span class="lan-2">Dasboard</span></a>
-                </li>
-                <li class="sidebar-list"><i class="fa fa-thumb-tack"></i><a class="sidebar-link sidebar-title" href="#">
-                  <i class="fa fa-calendar text-white" aria-hidden="true"></i>
-                    <span class="lan-4">Problem</span></a>
-                  <ul class="sidebar-submenu">
-                    <li><a href="Problem-list.html"><i class="fa fa-list text-white me-2" aria-hidden="true"></i>Problem List</a></li>
-                  </ul>
-                </li>
-                <li class="sidebar-list"><i class="fa fa-thumb-tack"></i><a class="sidebar-link sidebar-title" href="#">
-                  <i class="fa fa-newspaper-o text-white" aria-hidden="true"></i>
-                  <span class="lan-5">Service</span></a>
-                  <ul class="sidebar-submenu">
-                    <li><a href="AddService.html"><i class="fa fa-plus-square text-white me-2" aria-hidden="true"></i> Add Service</a></li>
-                     <li><a href="ServiceRequest-list.html"><i class="fa fa-plus-square text-white me-2" aria-hidden="true"></i>  Service Request List</a></li>
-                    
-                    <li><a href="ServiceReport-list.html"><i class="fa fa-list text-white me-2" aria-hidden="true"></i>Service Report</a></li>
-                  </ul>
-                </li>
-               <li class="sidebar-list"><i class="fa fa-thumb-tack"> </i>
-                  <a class="sidebar-link" href="Working-Service.html">
-                  <i class="fa fa-home text-white" aria-hidden="true"></i>
-                  <span class="lan-2">Working Service</span></a>
-                </li> 
-                <li class="sidebar-list"><i class="fa fa-thumb-tack"> </i>
-                  <a class="sidebar-link" href="Completed-Service.html">
-                  <i class="fa fa-home text-white" aria-hidden="true"></i>
-                  <span class="lan-2">Completed Service</span></a>
-                </li> 
-                <li class="sidebar-list"><i class="fa fa-thumb-tack"> </i>
-                  <a class="sidebar-link" href="Plumber.html">
-                  <i class="fa fa-home text-white" aria-hidden="true"></i>
-                  <span class="lan-2">Plumber</span></a>
-                </li> 
-                <li class="sidebar-list"><i class="fa fa-thumb-tack"> </i>
-                  <a class="sidebar-link" href="Payment.html">
-                  <i class="fa fa-home text-white" aria-hidden="true"></i>
-                  <span class="lan-2">Payment</span></a>
-                </li> 
-              <div class="right-arrow" id="right-arrow"><i data-feather="arrow-right"></i></div>
+               </nav>
             </div>
-          </nav>
-        </div>
         <!-- Page Sidebar Ends-->
         <div class="page-body">
         
@@ -190,7 +200,7 @@
             <div class="page-title">
               <div class="row">
                 <div class="col-6">
-                  <h4>Service Add</h4>
+                  <h4>Add Complain </h4>
                 </div>
                 <div class="col-6">
                   <ol class="breadcrumb">
@@ -198,8 +208,8 @@
                         <svg class="stroke-icon">
                           <use href="../assets/svg/icon-sprite.svg#stroke-home"></use>
                         </svg></a></li>
-                    <li class="breadcrumb-item">Service</li>
-                    <li class="breadcrumb-item active">Service Form</li>
+                    <li class="breadcrumb-item">Complain</li>
+                    <li class="breadcrumb-item active"> Complain Form</li>
                   </ol>
                 </div>
               </div>
@@ -214,7 +224,7 @@
                       <div class="row">
                         <div class="col-sm-6">
                           <div class="mb-3">
-                            <label class="required-validation">Problem </label>
+                            <label class="required-validation">Problems </label>
                             <select class="form-select">
                               <option>Select An Option</option>
                               <option>Ceramic Issues</option>
@@ -232,7 +242,7 @@
                         </div>
                         <div class="col-sm-6">
                           <div class="mb-3">
-                            <label class="required-validation">Name</label>
+                            <label class="required-validation">Customer Name</label>
                             <input class="form-control" type="text" placeholder="Name">
                           </div>
                         </div>
@@ -300,8 +310,8 @@
                         </div>
                       </div>
                       <div class="row">
-                            <label class="required-validation">Service Media:</label>
-                        <div class="col-sm-6">
+                            <label class="required-validation"><b>Service Media:</b></label>
+                        <div class="col-sm-3">
                           <div class="mb-3">
                             <label>Image:</label>
                             <div class="image-upload-wrapper" id="imagePreviewBox">
@@ -319,7 +329,15 @@
                             <input type="file" id="imageInput" accept="image/*" onchange="previewImage(event)" />
                           </div>
                         </div>
-                         <div class="col-sm-6">
+                        <div class="col-sm-3">
+                          <div class="mb-3">
+                            <label>Image:</label>
+                            <div class="image-upload-wrapper">
+                              <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSPw5nfT-FLz5SU9LQ53kEECDa17boqeMTJ4g&s" alt="" />
+                            </div>
+                          </div>
+                        </div>
+                         <div class="col-sm-3">
                              <div class="mb-3">
                                <label>Video:</label>
                                <div class="video-upload-wrapper" id="videoPreviewBox" style="position: relative;">
@@ -340,10 +358,28 @@
                                <input type="file" id="videoInput" accept="video/*" onchange="previewVideo(event)" style="display: none;" />
                              </div>
                             </div>
+                         <div class="col-sm-3">
+                            <div class="mb-3">
+                              <label>Video:</label>
+                              <div class="video-upload-wrapper" id="videoPreviewBox" style="position: relative;">
+                                <video src="https://videos.pexels.com/video-files/2236002/2236002-sd_640_360_24fps.mp4" autoplay muted loop style="width: 100%; height: auto;"></video>
+                                <div class="image-upload-actions">
+                                  <!-- Optional buttons can go here -->
+                                </div>
+                              </div>
+                            </div>
+                          </div>
                       </div>
                     </div>
                   </div>
                 </div>
+                <div class="page-title">
+              <div class="row">
+                <div class="col-6">
+                  <h4>Plumber Selection </h4>
+                </div>
+              </div>
+            </div>
                 <div class="card">
                   <div class="card-body">
                     <div class="form theme-form">
@@ -352,22 +388,17 @@
                           <div class="mb-3">
                             <label class="required-validation">Plumber Selection</label>
                             <select class="form-select">
-                              <option selected disabled>Select a Plumbing Issue</option>
-                              <option>Leaking Faucets</option>
-                              <option>Low Water Pressure</option>
-                              <option>Clogged Drains</option>
-                              <option>Running Toilet</option>
-                              <option>Concealed Tank Issues</option>
-                              <option>Overflow in Wash Basin</option>
-                              <option>Blocked Showerhead</option>
-                              <option>Cracked Ceramic Sink</option>
-                              <option>Water Heater Malfunction</option>
-                              <option>Improper Fitting – Pluto Brand</option>
-                              <option>Nexgen Sanitaryware Complaints</option>
-                              <option>Soyo Sanitaryware Leakage</option>
-                              <option>Improper Installation – Selfie Fittings</option>
-                              <option>Broken Pipe Under Sink</option>
-                              <option>Noise in Pipes</option>
+                              <option selected disabled>Select Plumber</option>
+                              <option value="Rajesh Kumar">Rajesh Kumar</option>
+                              <option value="Amit Patel">Amit Patel</option>
+                              <option value="Vijay Sharma">Vijay Sharma</option>
+                              <option value="Suresh Yadav">Suresh Yadav</option>
+                              <option value="Manoj Singh">Manoj Singh</option>
+                              <option value="Ravi Mehta">Ravi Mehta</option>
+                              <option value="Naresh Chauhan">Naresh Chauhan</option>
+                              <option value="Kiran Joshi">Kiran Joshi</option>
+                              <option value="Arun Desai">Arun Desai</option>
+                              <option value="Prakash Bhatt">Prakash Bhatt</option>
                             </select>
                           </div>
                         </div>
