--- a/index.html
+++ b/index.html
@@ -114,74 +114,84 @@
       <div class="page-body-wrapper">
         <!-- Page Sidebar Start-->
         <div class="sidebar-wrapper" data-layout="stroke-svg">
-          <div class="logo-wrapper"><a href="index.html"><img class="img-fluid w-75" src="assets/images/logo/logo-unique_it.webp" alt=""></a>
-            <div class="back-btn"><i class="fa fa-angle-left"> </i></div>
-            <div class="toggle-sidebar"><i class="status_toggle middle sidebar-toggle" data-feather="grid"> </i></div>
-          </div>
-          <div class="logo-icon-wrapper"><a href="index.html"></a></div>
-          <nav class="sidebar-main">
-            <div class="left-arrow" id="left-arrow"><i data-feather="arrow-left"></i></div>
-            <div id="sidebar-menu">
-              <ul class="sidebar-links" id="simple-bar">
-                <li class="back-btn"><a href="index.html"><img class="img-fluid" src="assets/images/logo/logo-icon.png" alt=""></a>
-                  <div class="mobile-back text-end"> <span>Back </span><i class="fa fa-angle-right ps-2" aria-hidden="true"></i></div>
-                </li>
-                <li class="pin-title sidebar-main-title">
-                  <div> 
-                    <h6>Pinned</h6>
+               <div class="logo-wrapper">
+                  <a href="index.html"><img class="img-fluid w-75" src="assets/images/logo/logo-unique_it.webp" alt=""></a>
+                  <div class="back-btn"><i class="fa fa-angle-left"> </i></div>
+                  <div class="toggle-sidebar"><i class="status_toggle middle sidebar-toggle" data-feather="grid"> </i></div>
+               </div>
+               <div class="logo-icon-wrapper"><a href="index.html"></a></div>
+               <nav class="sidebar-main">
+                  <div class="left-arrow" id="left-arrow"><i data-feather="arrow-left"></i></div>
+                  <div id="sidebar-menu">
+                     <ul class="sidebar-links" id="simple-bar">
+                     <li class="back-btn">
+                        <a href="index.html"><img class="img-fluid" src="assets/images/logo/logo-icon.png" alt=""></a>
+                        <div class="mobile-back text-end"> <span>Back </span><i class="fa fa-angle-right ps-2" aria-hidden="true"></i></div>
+                     </li>
+                     <li class="pin-title sidebar-main-title">
+                        <div>
+                           <h6>Pinned</h6>
+                        </div>
+                     </li>
+                     <li class="sidebar-main-title">
+                        <div>
+                           <h6 class="lan-1">General</h6>
+                        </div>
+                     </li>
+                     <li class="sidebar-list"><i class="fa fa-thumb-tack"> </i>
+                        <a class="sidebar-link" href="index.html">
+                        <i class="fa fa-home text-white" aria-hidden="true"></i>
+                        <span class="lan-2">Dasboard</span></a>
+                     </li>
+                     <li class="sidebar-list"><i class="fa fa-thumb-tack"> </i>
+                     <a class="sidebar-link" href="Problem-list.html">
+                     <i class="fa fa-home text-white" aria-hidden="true"></i>
+                     <span class="lan-2">Problem List</span></a>
+                  </li>
+                     <li class="sidebar-list"><i class="fa fa-thumb-tack"> </i>
+                     <a class="sidebar-link" href="ServiceRequest-list.html">
+                     <i class="fa fa-home text-white" aria-hidden="true"></i>
+                     <span class="lan-2">Service Request List</span></a>
+                  </li>
+                  <li class="sidebar-list"><i class="fa fa-thumb-tack"> </i>
+                     <a class="sidebar-link" href="ServiceReport-list.html">
+                     <i class="fa fa-home text-white" aria-hidden="true"></i>
+                     <span class="lan-2">Service Report</span></a>
+                  </li>
+                  <li class="sidebar-list"><i class="fa fa-thumb-tack"> </i>
+                     <a class="sidebar-link" href="service-status.html">
+                     <i class="fa fa-home text-white" aria-hidden="true"></i>
+                     <span class="lan-2">Service Status</span></a>
+                  </li>
+                     <li class="sidebar-list"><i class="fa fa-thumb-tack"> </i>
+                        <a class="sidebar-link" href="Working-Service.html">
+                        <i class="fa fa-home text-white" aria-hidden="true"></i>
+                        <span class="lan-2">Working Service</span></a>
+                     </li>
+                     <li class="sidebar-list"><i class="fa fa-thumb-tack"> </i>
+                        <a class="sidebar-link" href="Completed-Service.html">
+                        <i class="fa fa-home text-white" aria-hidden="true"></i>
+                        <span class="lan-2">Completed Service</span></a>
+                     </li>
+                     <li class="sidebar-list"><i class="fa fa-thumb-tack"> </i>
+                        <a class="sidebar-link" href="Plumberlist.html">
+                        <i class="fa fa-home text-white" aria-hidden="true"></i>
+                        <span class="lan-2">Plumber</span></a>
+                     </li>
+                      <li class="sidebar-list"><i class="fa fa-thumb-tack"> </i>
+                  <a class="sidebar-link" href="Plumberreport.html">
+                  <i class="fa fa-home text-white" aria-hidden="true"></i>
+                  <span class="lan-2">Plumber Report</span></a>
+                </li> 
+                     <li class="sidebar-list"><i class="fa fa-thumb-tack"> </i>
+                        <a class="sidebar-link" href="Payment.html">
+                        <i class="fa fa-home text-white" aria-hidden="true"></i>
+                        <span class="lan-2">Payment</span></a>
+                     </li>
+                     <div class="right-arrow" id="right-arrow"><i data-feather="arrow-right"></i></div>
                   </div>
-                </li>
-                <li class="sidebar-main-title">
-                  <div>
-                    <h6 class="lan-1">General</h6>
-                  </div>
-                </li>
-                <li class="sidebar-list"><i class="fa fa-thumb-tack"> </i>
-                  <a class="sidebar-link" href="index.html">
-                  <i class="fa fa-home text-white" aria-hidden="true"></i>
-                  <span class="lan-2">Dasboard</span></a>
-                </li>
-                <li class="sidebar-list"><i class="fa fa-thumb-tack"></i><a class="sidebar-link sidebar-title" href="#">
-                  <i class="fa fa-calendar text-white" aria-hidden="true"></i>
-                    <span class="lan-4">Problem</span></a>
-                  <ul class="sidebar-submenu">
-                    <li><a href="Problem-list.html"><i class="fa fa-list text-white me-2" aria-hidden="true"></i>Problem List</a></li>
-                  </ul>
-                </li>
-                <li class="sidebar-list"><i class="fa fa-thumb-tack"></i><a class="sidebar-link sidebar-title" href="#">
-                  <i class="fa fa-newspaper-o text-white" aria-hidden="true"></i>
-                  <span class="lan-5">Service</span></a>
-                  <ul class="sidebar-submenu">
-                    <li><a href="AddService.html"><i class="fa fa-plus-square text-white me-2" aria-hidden="true"></i> Add Service</a></li>
-                     <li><a href="ServiceRequest-list.html"><i class="fa fa-plus-square text-white me-2" aria-hidden="true"></i>  Service Request List</a></li>
-                    
-                    <li><a href="ServiceReport-list.html"><i class="fa fa-list text-white me-2" aria-hidden="true"></i>Service Report</a></li>
-                  </ul>
-                </li>
-               <li class="sidebar-list"><i class="fa fa-thumb-tack"> </i>
-                  <a class="sidebar-link" href="Working-Service.html">
-                  <i class="fa fa-home text-white" aria-hidden="true"></i>
-                  <span class="lan-2">Working Service</span></a>
-                </li> 
-                <li class="sidebar-list"><i class="fa fa-thumb-tack"> </i>
-                  <a class="sidebar-link" href="Completed-Service.html">
-                  <i class="fa fa-home text-white" aria-hidden="true"></i>
-                  <span class="lan-2">Completed Service</span></a>
-                </li> 
-                <li class="sidebar-list"><i class="fa fa-thumb-tack"> </i>
-                  <a class="sidebar-link" href="Plumber.html">
-                  <i class="fa fa-home text-white" aria-hidden="true"></i>
-                  <span class="lan-2">Plumber</span></a>
-                </li> 
-                <li class="sidebar-list"><i class="fa fa-thumb-tack"> </i>
-                  <a class="sidebar-link" href="Payment.html">
-                  <i class="fa fa-home text-white" aria-hidden="true"></i>
-                  <span class="lan-2">Payment</span></a>
-                </li> 
-              <div class="right-arrow" id="right-arrow"><i data-feather="arrow-right"></i></div>
+               </nav>
             </div>
-          </nav>
-        </div>
         <!-- Page Sidebar Ends-->
         <div class="page-body">
         
