--- a/Problem-add.html
+++ b/Problem-add.html
@@ -141,23 +141,26 @@
                   <i class="fa fa-home text-white" aria-hidden="true"></i>
                   <span class="lan-2">Dasboard</span></a>
                 </li>
-                <li class="sidebar-list"><i class="fa fa-thumb-tack"></i><a class="sidebar-link sidebar-title" href="#">
-                  <i class="fa fa-calendar text-white" aria-hidden="true"></i>
-                    <span class="lan-4">Problem</span></a>
-                  <ul class="sidebar-submenu">
-                    <li><a href="Problem-list.html"><i class="fa fa-list text-white me-2" aria-hidden="true"></i>Problem List</a></li>
-                  </ul>
-                </li>
-                <li class="sidebar-list"><i class="fa fa-thumb-tack"></i><a class="sidebar-link sidebar-title" href="#">
-                  <i class="fa fa-newspaper-o text-white" aria-hidden="true"></i>
-                  <span class="lan-5">Service</span></a>
-                  <ul class="sidebar-submenu">
-                    <li><a href="AddService.html"><i class="fa fa-plus-square text-white me-2" aria-hidden="true"></i> Add Service</a></li>
-                     <li><a href="ServiceRequest-list.html"><i class="fa fa-plus-square text-white me-2" aria-hidden="true"></i>  Service Request List</a></li>
-                    
-                    <li><a href="ServiceReport-list.html"><i class="fa fa-list text-white me-2" aria-hidden="true"></i>Service Report</a></li>
-                  </ul>
-                </li>
+               <li class="sidebar-list"><i class="fa fa-thumb-tack"> </i>
+                     <a class="sidebar-link" href="Problem-list.html">
+                     <i class="fa fa-home text-white" aria-hidden="true"></i>
+                     <span class="lan-2">Problem List</span></a>
+                  </li>
+                <li class="sidebar-list"><i class="fa fa-thumb-tack"> </i>
+                     <a class="sidebar-link" href="ServiceRequest-list.html">
+                     <i class="fa fa-home text-white" aria-hidden="true"></i>
+                     <span class="lan-2">Service Request List</span></a>
+                  </li>
+                  <li class="sidebar-list"><i class="fa fa-thumb-tack"> </i>
+                     <a class="sidebar-link" href="ServiceReport-list.html">
+                     <i class="fa fa-home text-white" aria-hidden="true"></i>
+                     <span class="lan-2">Service Report</span></a>
+                  </li>
+                  <li class="sidebar-list"><i class="fa fa-thumb-tack"> </i>
+                     <a class="sidebar-link" href="service-status.html">
+                     <i class="fa fa-home text-white" aria-hidden="true"></i>
+                     <span class="lan-2">Service Status</span></a>
+                  </li>
                <li class="sidebar-list"><i class="fa fa-thumb-tack"> </i>
                   <a class="sidebar-link" href="Working-Service.html">
                   <i class="fa fa-home text-white" aria-hidden="true"></i>
@@ -169,9 +172,14 @@
                   <span class="lan-2">Completed Service</span></a>
                 </li> 
                 <li class="sidebar-list"><i class="fa fa-thumb-tack"> </i>
-                  <a class="sidebar-link" href="Plumber.html">
+                  <a class="sidebar-link" href="Plumberlist.html">
                   <i class="fa fa-home text-white" aria-hidden="true"></i>
                   <span class="lan-2">Plumber</span></a>
+                </li> 
+                <li class="sidebar-list"><i class="fa fa-thumb-tack"> </i>
+                  <a class="sidebar-link" href="Plumberreport.html">
+                  <i class="fa fa-home text-white" aria-hidden="true"></i>
+                  <span class="lan-2">Plumber Report</span></a>
                 </li> 
                 <li class="sidebar-list"><i class="fa fa-thumb-tack"> </i>
                   <a class="sidebar-link" href="Payment.html">
@@ -190,7 +198,7 @@
             <div class="page-title">
               <div class="row">
                 <div class="col-6">
-                  <h4> Problem Add</h4>
+                  <h4>Add Problem </h4>
                 </div>
                 <div class="col-6">
                   <ol class="breadcrumb">
@@ -199,7 +207,7 @@
                           <use href="../assets/svg/icon-sprite.svg#stroke-home"></use>
                         </svg></a></li>
                     <li class="breadcrumb-item"> Problem</li>
-                    <li class="breadcrumb-item active"> Problem Form</li>
+                    <li class="breadcrumb-item active">Form Problem </li>
                   </ol>
                 </div>
               </div>
@@ -214,26 +222,14 @@
                       <div class="row">
                         <div class="col-sm-6">
                           <div class="mb-3">
-                            <label class="required-validation">Problem </label>
-                            <select class="form-select">
-                              <option>Select An Option</option>
-                              <option>Ceramic Issues</option>
-                              <option>Nexgen Sanitaryware</option>
-                              <option>Overflow</option>
-                              <option>Pluto Other Fitting</option>
-                              <option>Selfie Other Fitting</option>
-                              <option>Soyo Sanitaryware</option>
-                              <option>Leakage</option>
-                              <option>Low Pressure</option>
-                              <option>Blokage</option>
-                              <option>Consealed Tank</option>
-                            </select>
+                            <label>Problems</label>
+                            <input class="form-control" type="text" placeholder="Problems">
                           </div>
                         </div>
                         <div class="col-sm-6">
                           <div class="mb-3">
                             <label>Sequence</label>
-                            <input class="form-control" type="text" placeholder="Sequence">
+                            <input class="form-control" type="number" placeholder="Sequence">
                           </div>
                         </div>
                       </div>
@@ -242,26 +238,6 @@
                           <div class="mb-3">
                             <label>Description</label>
                             <textarea class="form-control" id="exampleFormControlTextarea4" rows="3"></textarea>
-                          </div>
-                        </div>
-                      </div>
-                      <div class="row">
-                            <label class="required-validation">Problem Image:</label>
-                        <div class="col-sm-6">
-                          <div class="mb-3">
-                            <div class="image-upload-wrapper" id="imagePreviewBox">
-                              <span class="image-placeholder" id="imagePlaceholder">Add Image</span>
-                              <img id="previewImage" src="" alt="" style="display: none;" />
-
-                              <div class="image-upload-actions">
-                                <button type="button" onclick="document.getElementById('imageInput').click()">
-                                  ✏️
-                                </button>
-                                <button type="button" onclick="removeImage()">❌</button>
-                              </div>
-                            </div>
-                            
-                            <input type="file" id="imageInput" accept="image/*" onchange="previewImage(event)" />
                           </div>
                         </div>
                       </div>
