--- a/navbar.html
+++ b/navbar.html
@@ -152,10 +152,11 @@
                   <i class="fa fa-newspaper-o text-white" aria-hidden="true"></i>
                   <span class="lan-5">Service</span></a>
                   <ul class="sidebar-submenu">
-                    <li><a href="AddService.html"><i class="fa fa-plus-square text-white me-2" aria-hidden="true"></i> Add Service</a></li>
+                    
                      <li><a href="ServiceRequest-list.html"><i class="fa fa-plus-square text-white me-2" aria-hidden="true"></i>  Service Request List</a></li>
                     
                     <li><a href="ServiceReport-list.html"><i class="fa fa-list text-white me-2" aria-hidden="true"></i>Service Report</a></li>
+                        <li><a href="service-status.html"><i class="fa fa-list text-white me-2" aria-hidden="true"></i>Service Status</a></li>
                   </ul>
                 </li>
                <li class="sidebar-list"><i class="fa fa-thumb-tack"> </i>
@@ -169,9 +170,14 @@
                   <span class="lan-2">Completed Service</span></a>
                 </li> 
                 <li class="sidebar-list"><i class="fa fa-thumb-tack"> </i>
-                  <a class="sidebar-link" href="Plumber.html">
+                  <a class="sidebar-link" href="Plumberlist.html">
                   <i class="fa fa-home text-white" aria-hidden="true"></i>
                   <span class="lan-2">Plumber</span></a>
+                </li> 
+                <li class="sidebar-list"><i class="fa fa-thumb-tack"> </i>
+                  <a class="sidebar-link" href="Plumberreport.html">
+                  <i class="fa fa-home text-white" aria-hidden="true"></i>
+                  <span class="lan-2">Plumber Report</span></a>
                 </li> 
                 <li class="sidebar-list"><i class="fa fa-thumb-tack"> </i>
                   <a class="sidebar-link" href="Payment.html">
