--- a/index.html
+++ b/index.html
@@ -338,10 +338,10 @@
         </div>
         <!-- footer start-->
         <footer class="footer">
-          <div class="container-fluid">
+          <div class="container-fluid"> 
             <div class="row">
               <div class="col-md-12 footer-copyright text-center">
-                <p class="mb-0">Copyright 2024 © Riho theme by pixelstrap  </p>
+                <p class="mb-0">Powered By <a href="https://theuniqueitsolution.com/" target="_blank" class="text-primary">Unique IT Solution</a></p>
               </div>
             </div>
           </div>
