--- a/AddService.html
+++ b/AddService.html
@@ -206,7 +206,7 @@
                   <ol class="breadcrumb">
                     <li class="breadcrumb-item"><a href="index.html">                                       
                         <svg class="stroke-icon">
-                          <use href="../assets/svg/icon-sprite.svg#stroke-home"></use>
+                          <use href="assets/svg/icon-sprite.svg#stroke-home"></use>
                         </svg></a></li>
                     <li class="breadcrumb-item">Complain</li>
                     <li class="breadcrumb-item active"> Complain Form</li>
