--- a/Plumber-add.html
+++ b/Plumber-add.html
@@ -204,7 +204,7 @@
                   <ol class="breadcrumb">
                     <li class="breadcrumb-item"><a href="index.html">                                       
                         <svg class="stroke-icon">
-                          <use href="../assets/svg/icon-sprite.svg#stroke-home"></use>
+                          <use href="assets/svg/icon-sprite.svg#stroke-home"></use>
                         </svg></a></li>
                     <li class="breadcrumb-item">Plumber</li>
                     <li class="breadcrumb-item active">Plumber Form</li>
